--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "vue": "^2.5.2",
     "vue-material": "^0.7.4",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "webpack-dev-server": "^2.11.5"
+
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
