--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "vue-material": "^0.7.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "webpack-dev-server": "^2.11.5"
+    "webpack-dev-server": "^2.11.5",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
