--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.11.5",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "extract-text-webpack-plugin": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -70,10 +71,6 @@
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.11.5",
     "webpack-merge": "^4.1.0"
-  },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
   },
   "browserslist": [
     "> 1%",
