--- a/package.json
+++ b/package.json
@@ -72,6 +72,10 @@
     "webpack-dev-server": "^2.11.5",
     "webpack-merge": "^4.1.0"
   },
+  "engines": {
+    "node": ">= 6.0.0",
+    "npm": ">= 3.0.0"
+  },
   "browserslist": [
     "> 1%",
     "last 2 versions",
