--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.11.5",
     "webpack-merge": "^4.1.0",
-    "extract-text-webpack-plugin": "^3.0.0"
+    "extract-text-webpack-plugin": "^3.0.0",
+    "eslint-friendly-formatter": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
